[generate/protocolDiff] show version, need to fix more bugs